# Esdeath-Cryostasis

./: .gitignore  README.md  build.gradle  go.mod  gradle.properties  settings.gradle
.github/workflows/: build.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  docker-stack.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  cosmetics.py  meta.py  players.py
backend/app/auth/: session.py  tokens.py
backend/app/db/: dsn.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_auth_nonces.py
backend/app/domain/: models.py
backend/app/repo/: base.py  memory.py  postgres.py
backend/app/storage/: cdn.py
backend/src/moe/ramon/cryostasis/backend/: CryostasisServer.java  Store.java
backend/tests/: conftest.py  test_auth.py  test_contract.py  test_dsn.py  test_nonce_store.py  test_repo_postgres.py  test_storage.py
docs/: backend-api.md  backend-architecture.md  feature-spec.md  modules.md
installer/: console_other.go  console_windows.go  fabric.go  fabricapi.go  github.go  go.mod  install_other.go  install_windows.go  installer_test.go  main.go  minecraft.go  mods.go  profile.go  ui.go
installer/assets/: esdeath-ascii.txt
internal/engine/: engine.go  engine_test.go  fabric.go  fabricapi.go  github.go  (+4 more)
launcher/: README.md  app.go  config.go  go.mod  install.go  launch.go  launch_darwin.go  launch_other.go  launch_windows.go  main.go  wails.json
(+105 files in other folders)
